[project]
name = "nk-passkey-test"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=1.2.1",
    "selenium>=4.0.0",
]

[project.scripts]
register = "nk_passkey_test.register:main"
login = "nk_passkey_test.login:main"

[dependency-groups]
dev = ["basedpyright>=1.37.0", "ruff>=0.14.0", "pytest>=9.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nk_passkey_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# https://app.box.com/file/2112862523101
